Bug 95373 - Suspicious warning in brw_blorp_clear.cpp
Summary: Suspicious warning in brw_blorp_clear.cpp
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Topi Pohjolainen
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-13 00:31 UTC by Ian Romanick
Modified: 2016-05-25 22:05 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Ian Romanick 2016-05-13 00:31:03 UTC
brw_blorp_clear.cpp: In member function ‘const GLuint* brw_blorp_const_color_program::compile(brw_context*, GLuint*)’:
brw_blorp_clear.cpp:204:26: warning: comparison of unsigned expression >= 0 is always true [-Wtype-limits]
                 base_mrf >= 0 ? brw_message_reg(base_mrf) : mrf_rt_write,
                          ^
Comment 1 Jason Ekstrand 2016-05-25 22:05:18 UTC
I don't think this code exists anymore.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.